History: fix video css breaking scrollbar

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -95,9 +95,6 @@
   z-index: 3;
 }
 .panel-video {
-  position: absolute;
-  bottom: 0;
-  width: 320px;
 
 }
 .pad-left {
